# Mapeado-MultiDrone-Orbslam

./: AGENTS.md  README.md
.agents/: README.md
.agents/skills/actualizar-documentacion/: SKILL.md
.agents/skills/compilar-paquetes/: SKILL.md
.agents/skills/ejecutar-fase/: SKILL.md
.codex/: config.toml
.codex/agents/: analizador_simulacion_logs.toml  curador_documentacion.toml  diagnosticador_build.toml  implementador_fase.toml  planificador_fase.toml
codex/contexto/: 00_BOOTSTRAP_MINIMO.md  00_LEER_PRIMERO.md  01_ESTADO_ACTUAL.md  01_ESTADO_ACTUAL_RESUMEN.md  02_REGLAS_TECNICAS.md  03_ARQUITECTURA_ACTUAL.md  04_TOPICS_SERVICES_ACTIONS.md  05_MAPA_PAQUETES.md  05_MAPA_PAQUETES_SHORT.md  06_MAPA_CODIGO.md  07_ULTIMA_SESION.md  08_POLITICA_TOKENS_DOCUMENTACION.md  09_LOGS_Y_SUBLOGS.md  CODEX_INDEX.yaml  CONTEXTO_MINIMO_ACTUAL.md
codex/herramientas/: USO_HERRAMIENTAS.md  build_selected_packages.sh  check_docs_length.sh  find_context.py  find_context_help.md  reduce_build_log.sh  reduce_simulation_log.sh  run_simulation.sh  split_simulation_log.sh
codex/pipeline/: PIPELINE_MAESTRO.md  PLANTILLA_SUBFASE_EJECUTABLE.md
orbslam3_multi/src/: covisibility_database.cpp  fiducial_anchor_manager.cpp  global_map_builder.cpp  global_pose_store.cpp  landmark_score_manager.cpp  loop_detector.cpp  optimization_debug_exporter.cpp  optimization_manager.cpp  pose_graph_builder.cpp  pose_graph_problem_io.cpp  raw_map_database.cpp  test_opt_graph_offline.cpp
orbslam3_server/: CMakeLists.txt  package.xml
orbslam3_server/include/orbslam3_server/: global_map_server.hpp  global_pose_corrector.hpp
orbslam3_server/launch/: global_orb_map_server.launch.py  global_orb_map_server_antiguo.launch.py
orbslam3_server/src/: global_map_server.cpp  global_pose_corrector.cpp
(+153 files in other folders)
